Fix stretched images on narrow viewports

--- a/styles/shared.css
+++ b/styles/shared.css
@@ -51,6 +51,7 @@ picture {
 
 figure img,
 picture img {
+  height: auto;
   max-width: 100%;
 }
 
